IE11: Fix nav flyouts being covered by #main
fixes #3942

--- a/public/css/icinga/layout-structure.less
+++ b/public/css/icinga/layout-structure.less
@@ -10,6 +10,8 @@ html {
   position: fixed;
   left: 0;
   top: 0;
+  // Prevent nav-level-2 flyovers from being covered by #main
+  z-index: 0;
 }
 
 #header {
