--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -46,6 +46,10 @@
       text-decoration: none;
     }
   }
+
+  .nav-level-2 {
+    z-index: 1;
+  }
 }
 
 #layout:not(.sidebar-collapsed) #menu .nav-item > a {
